# minecraft-c

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile.sh  todo.txt
.cache/clangd/index/: aabb2d.h.0AB714C687304360.idx  aabb2d.h.EDD6D27F41055ED9.idx  affine-mat.h.5C9B5D88E932E357.idx  affine-post.h.29533B5070F5B0B4.idx  affine-pre.h.D8C98B4D7ADBB057.idx  affine.c.C81E864B75D5D5EC.idx  affine.h.4795D58F0DC86CAC.idx  affine.h.DAC4294827048388.idx  affine.h.EBC6F2CC305FC0A2.idx  affine2d.c.A50EBB92B4D6C13A.idx  affine2d.h.79696925CA8CF433.idx  affine2d.h.E77B61B6E2C09119.idx  arm.h.F43FC4B6CB2AA942.idx  bezier.c.19A06A6AD662ACC1.idx  bezier.h.50B5B0AA8888F488.idx  bezier.h.5B68AAC3CC373680.idx  box.c.1A63A7AA6423D11F.idx  box.h.0B5240898BD4D2F2.idx  box.h.1DCE3AB0FCC968B2.idx  call.h.EBBE6455EDF0430F.idx  cam.c.C097D648AD276079.idx  cam.h.5C16656FDA407696.idx  cam.h.9B36700191D70336.idx  cglm.h.1F4A20F2D6F7D0C6.idx  cocoa_init.m.D53249102C267A9F.idx  cocoa_joystick.h.94D6905C9C2033E4.idx  cocoa_joystick.m.282169DB5BCA3C17.idx  cocoa_monitor.m.030FBAA9F98323AA.idx  cocoa_platform.h.11EC50BF9B506CDC.idx  cocoa_time.c.F091B25D109A3219.idx  cocoa_time.h.07132DB399651D7C.idx  cocoa_window.m.2A20DEC4C4FB6ED0.idx  color.h.F1BBC663C8207F88.idx  common.h.A96F5FF17E129E8D.idx  context.c.C3642577200E1907.idx  curve.c.1585804BA0344754.idx  curve.h.26422D8A0DA0CF87.idx  curve.h.B0861BF584D1D776.idx  ease.c.3435DD1218A4CC32.idx  ease.h.1EF94AD7B9967B2E.idx  (+152 more)
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/noise/: Makefile
src/: main.c  shaders.h  state.h
src/ecs/: ecs.h
